--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,24 +1,24 @@
 .phonebook__form {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 16px;
 
     /* border: 2px solid;
     border-image: conic-gradient(red, yellow, lime, aqua, blue, magenta, red);
     border-image-slice: 1; */
 
     border: 2px solid;
+    border-radius: 5px;
     animation: rotateColors 6s linear infinite;
     
-    padding: 12px;
-    width: 240px;
+    padding: 20px;
 }
 
 .phonebook__label {
     display: flex;
     flex-direction: column;
-
-    width: 180px;
+    margin-bottom: 10px;
+    font-weight: 500;
 }
 
 @keyframes rotateColors {
@@ -47,21 +47,33 @@
     }
 }
 
-.phonebook__add {
+.phonebook__input {
+    margin-top: 10px;
+    padding: 2px 10px;
+
+    border: 0.5px solid black;
+    border-radius: 2px;
+    
+    width: 240px;
+}
+
+.phonebook__button {
     background-color: white;
-    border-radius: 8px;
+    border: 1px solid gray;
+    border-radius: 5px;
 
     cursor: pointer;
     width: 120px;
+    height: 24px;
 }
 
-.phonebook__add:hover {
+.phonebook__button:hover {
     color: blue;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
 }
 
-.phonebook__add:focus,
-.phonebook__add:active {
+.phonebook__button:focus,
+.phonebook__button:active {
     outline: none;
 
     background-color: blue;
