--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -2,33 +2,50 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    padding: 0 12px;
+    padding: 0 0 0 20px;
 }
 
 .phonebook__list li {
     display: flex;
-    gap: 12px;
     align-items: center;
+    justify-content: space-between;
 }
 
-.contact__item {
+.phonebook__list li:hover {
+    background-color: #f0f0f0;
+}
+
+.phonebook__contact {
+    display: flex;
+    gap: 16px;
+}
+
+.contact__button {
+    width: 96px;
+    height: 24px;
+
     background-color: white;
-    border-color: inherit;
-    border-radius: 8px;
+    border: 1px solid gray;
+    border-radius: 5px;
+
+    /* opacity: 0.6; */
 
     cursor: pointer;
 }
 
-.contact__item:hover {
-    color: blue;
+.contact__button:hover {
+    color: red;
+    background-color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+    /* opacity: 1; */
 }
 
-.contact__item:focus,
-.contact__item:active {
+.contact__button:focus,
+.contact__button:active {
     outline: none;
 
-    background-color: blue;
+    background-color: red;
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+    /* opacity: 1; */
 }
