--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,7 +1,14 @@
-.phonebook__search {
+.phonebook__label {
     display: flex;
     flex-direction: column;
 
+    padding: 4px 10px;
+}
+
+.phonebook__input {
+    margin-top: 10px;
     width: 240px;
-    padding: 12px;
+    border: 0.5px solid black;
+    border-radius: 2px;
+    padding: 2px 10px;
 }
